Restyling according to Alex tips
Comment padding
Colors for task status and comment
Changing JS hover to CSS hover

--- a/public/stylesheets/sass/activities.sass
+++ b/public/stylesheets/sass/activities.sass
@@ -1,11 +1,14 @@
 .activity
   :padding 0px
-  :margin 10px 0px
+    :top 2px
+  :margin 30px 0px
   :font-size 12px
+  :background-color #f1f2f2
+  :border-bottom solid 1px rgb(235,235,235)
   .date
     :float right
     :font-size 10px
-    :color rgb(180,180,180)
+    :color #c9d4dc
     :padding-top 3px
   a
     :font-weight bold
@@ -14,11 +17,10 @@
     :margin
       :right 3px
   .clear
-    :border-bottom solid 1px rgb(235,235,235)
     :margin-left 26px
     :padding-bottom 1px
-    
-.activity_hover
+
+.activity:hover
   .date
     :color rgb(0,0,0)
   .clear
@@ -29,28 +31,28 @@
   :width 16px
   :height 16px
   :margin-right 5px
-  :background rgb(0,0,0)
-.activity_task
-  :background url(../images/activity_task.jpg) no-repeat 
-.activity_task_unread
-  :background url(../images/activity_task.jpg) -16px 0px no-repeat
-.activity_task_list
-  :background url(../images/activity_tasklist.jpg) no-repeat 
-.activity_task_list_unread
-  :background url(../images/activity_tasklist.jpg) -16px 0px no-repeat
-.activity_person  
-  :background url(../images/activity_person.jpg) no-repeat
-.activity_person_unread
-  :background url(../images/activity_person.jpg) -16px 0px no-repeat
-.activity_page
-  :background url(../images/activity_page.jpg) no-repeat
-.activity_page_unread
-  :background url(../images/activity_page.jpg) -16px 0px no-repeat  
-.activity_conversation
-  :background url(../images/activity_conversation.jpg) no-repeat 
-.activity_conversation_unread
-  :background url(../images/activity_conversation.jpg) -16px 0px no-repeat
-.activity_project
-  :background url(../images/activity_project.jpg) no-repeat 
-.activity_project_unread
-  :background url(../images/activity_project.jpg) -16px 0px no-repeat  
+//:background rgb(0,0,0)
+// .activity_task
+//   :background url(../images/activity_task.jpg) no-repeat 
+// .activity_task_unread
+//   :background url(../images/activity_task.jpg) -16px 0px no-repeat
+// .activity_task_list
+//   :background url(../images/activity_tasklist.jpg) no-repeat 
+// .activity_task_list_unread
+//   :background url(../images/activity_tasklist.jpg) -16px 0px no-repeat
+// .activity_person  
+//   :background url(../images/activity_person.jpg) no-repeat
+// .activity_person_unread
+//   :background url(../images/activity_person.jpg) -16px 0px no-repeat
+// .activity_page
+//   :background url(../images/activity_page.jpg) no-repeat
+// .activity_page_unread
+//   :background url(../images/activity_page.jpg) -16px 0px no-repeat  
+// .activity_conversation
+//   :background url(../images/activity_conversation.jpg) no-repeat 
+// .activity_conversation_unread
+//   :background url(../images/activity_conversation.jpg) -16px 0px no-repeat
+// .activity_project
+//   :background url(../images/activity_project.jpg) no-repeat 
+// .activity_project_unread
+//   :background url(../images/activity_project.jpg) -16px 0px no-repeat  
