--- a/public/stylesheets/sass/comments/form.sass
+++ b/public/stylesheets/sass/comments/form.sass
@@ -50,18 +50,21 @@ form#new_comment
       select
         :margin 0px
         :padding 0px
+    .new:hover
+      :background #9da3a7
+      :border solid 1px #7d8387
     .open:hover
-      :background rgb(50,50,250)
-      :border solid 1px rgb(50,50,250)
+      :background #ffc947
+      :border solid 1px #dfa927
     .hold:hover
-      :background rgb(130,0,193)
-      :border solid 1px rgb(130,0,193)
+      :background #be3cff
+      :border solid 1px #9e1cdf
     .resolved:hover
-      :background rgb(0,200,0)
-      :border solid 1px rgb(0,200,0)
+      :background #afd142
+      :border solid 1px #8fb122
     .rejected:hover
-      :background rgb(200,0,0)
-      :border solid 1px rgb(200,0,0)
+      :background #e97063
+      :border solid 1px #c95043
   .submit
     :padding
       :top 3px
