--- a/public/stylesheets/sass/comments/show.sass
+++ b/public/stylesheets/sass/comments/show.sass
@@ -1,7 +1,5 @@
 .comment
-  :margin 0px
-    :top 15px
-    :bottom 15px
+  :margin 30px 0px
   &:hover
     p.actions
       :visibility visible
@@ -15,7 +13,7 @@
       :display block
       :width 16px
       :height 40px
-  .info  
+  .info
     :width 80px
     :float left
     .thumb_avatar
@@ -25,7 +23,7 @@
       img
         :overflow auto
         :position absolute
-        :display block      
+        :display block
     .unread
       :float left
       :position relative
@@ -52,7 +50,6 @@
     :float right
     .name
       :font-size 12px
-      :border-bottom solid 1px rgb(235,235,235)      
       a
         :font-size 12px
         :font-weight bold
@@ -62,11 +59,12 @@
     .date
       :float right
       :font-size 10px
-      :color rgb(180,180,180)
+      :color #9da3a7
     .body
       :margin-top 5px
     .clear
-.comment_hover
+
+.comment:hover
   .block
     .name
       :border-bottom solid 1px rgb(200,200,200)
