--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -1,9 +1,12 @@
 @media screen
+  html
+    :overflow-y scroll
+    :overflow-x auto
   html,body 
     :margin 0px 
     :padding 0px
   body
-    :background url(/images/background-gradient.png) repeat-x white
+    :background white
     :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
   h1 
     :font-size 1.3em
