--- a/public/stylesheets/sass/tasks/default.sass
+++ b/public/stylesheets/sass/tasks/default.sass
@@ -35,16 +35,17 @@ span.task_status, span.current_task_status
   :font-size 11px
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
+  :display inline-block
 .task_status_new
-  :background rgb(170,170,170)
+  :background #9da3a7
 .task_status_open
-  :background rgb(50,50,250)
+  :background #ffc947
 .task_status_hold
-  :background rgb(130,0,193)
+  :background #be3cff
 .task_status_resolved
-  :background rgb(0,200,0)
+  :background #afd142
 .task_status_rejected
-  :background rgb(200,0,0)
+  :background #e97063
 
 .tasks
   .archived_task
