--- a/public/stylesheets/sass/tasks/item.sass
+++ b/public/stylesheets/sass/tasks/item.sass
@@ -84,16 +84,16 @@ div.task_list_wrap
       :left 2px
       :right 0px
 .active_new
-  :background rgb(170,170,170)
+  :background #9da3a7
 .active_open
-  :background rgb(50,50,250)
+  :background #ffc947
 .active_hold
-  :background rgb(130,0,193)
+  :background #be3cff
 .active_resolved
-  :background rgb(0,200,0)
+  :background #afd142
 .active_rejected
-  :background rgb(200,0,0)
-  
+  :background #e97063
+
 .task_item_resolved,.task_item_rejected
   a.name
     :text-decoration line-through
