--- a/public/stylesheets/sass/users/show.sass
+++ b/public/stylesheets/sass/users/show.sass
@@ -13,7 +13,7 @@
       :topright 5px
     :-webkit-border-top-left-radius 5px
     :-webkit-border-top-right-radius 5px
-    :background rgb(159,227,236)
+    :background #78acd7
     :padding 10px
     h2
       :margin 0px
@@ -23,8 +23,6 @@
         :vertical-align middle
       span.login
         :margin-left 5px
-        :background rgb(182,228,234)
-        :border 1px solid rgb(116,213,226)
         :padding 5px
         :font-size 14px
         :-moz-border-radius 5px
