--- a/app/views/tasks/_my_tasks.haml
+++ b/app/views/tasks/_my_tasks.haml
@@ -2,7 +2,6 @@
 .task_list_wrap
   - for task in tasks
     .task{ :class => task.overdue? ? 'overdue' : '' }
-      = task_status(task,:column)
       = render_due_on(task,current_user)
-      = link_to task.name, project_task_list_task_path(task.project.permalink,task.task_list.id,task), :class => "name"
+      = link_to task.name, project_task_list_task_path(task.project,task.task_list,task), :class => "name"
     .clear
