--- a/app/javascripts/i18n/timeago.erb
+++ b/app/javascripts/i18n/timeago.erb
@@ -6,13 +6,24 @@ function format_posted_date_<%= I18n.locale %>()
     current_date  = new Date();
     posted_date  = new Date();
     posted_date.setTime(c.readAttribute('alt'));
+		
+		posted_date_beginning_of_day = new Date(posted_date), current_date_beginning_of_day = new Date(current_date);
+		
+		posted_date_beginning_of_day.setHours(0);
+		posted_date_beginning_of_day.setMinutes(0);
+		posted_date_beginning_of_day.setSeconds(0);
 
+		current_date_beginning_of_day.setHours(0);
+		current_date_beginning_of_day.setMinutes(0);
+		current_date_beginning_of_day.setSeconds(0);
+
+		
     minutes = Math.floor((current_date-posted_date) / (1000 * 60));
-    days = Math.floor((current_date-posted_date) / (1000 * 60 * 60 * 24));
+    days = Math.floor((current_date_beginning_of_day-posted_date_beginning_of_day) / (1000 * 60 * 60 * 24));
 
     if(minutes < 60)    { c.update(minutesAgoInWords_<%= I18n.locale %>(minutes)); }
     else if(days == 0)  { c.update(posted_date.strftime_<%= I18n.locale %>("%I:%M %p")); }
-    else if(days <= 1)  { c.update('<%= I18n.t 'date.yesterday' %> ' + posted_date.strftime_<%= I18n.locale %>("%I:%M %p")); }
+    else if(days == 1)  { c.update('<%= I18n.t 'date.yesterday' %> ' + posted_date.strftime_<%= I18n.locale %>("%I:%M %p")); }
     else if(days <= 7)       { c.update(posted_date.strftime_<%= I18n.locale %>("%A <%= I18n.t('date.formats.short')%>")); }
     else if(current_date.getFullYear() == posted_date.getFullYear()) { c.update(posted_date.strftime_<%= I18n.locale %>("<%= I18n.t('date.formats.short')%>")); }
     else c.update(posted_date.strftime_<%= I18n.locale %>("<%= I18n.t('date.formats.long')%>"));    
@@ -34,3 +45,4 @@ function minutesAgoInWords_<%= I18n.locale %>(minutes) {
   if(minutes == 1) { return "<%= one_minute_ago %>"; }
   return ""+"<%= minutes_ago %>"+"";
   }
+
