--- a/public/stylesheets/sass/banner/gantt_chart.sass
+++ b/public/stylesheets/sass/banner/gantt_chart.sass
@@ -4,8 +4,8 @@
     :position relative
     :display block
     :height 26px
-    :background rgb(140,208,217)
-    :border-bottom solid 1px rgb(100,168,177)
+    :background #78acd7
+    :border-bottom solid 1px #386c97
     :color rgb(80,80,80)
     .mark
       :position absolute
@@ -26,7 +26,7 @@
       :display block
       &.major
         :font-weight bold
-        :color rgb(160,160,160)
+        :color #386c97
   .row
     :position relative
     :display block
@@ -47,5 +47,3 @@
     :-webkit-border-radius 4px
   .task:hover
     :overflow visible
-    
-    
