--- a/public/stylesheets/sass/column.sass
+++ b/public/stylesheets/sass/column.sass
@@ -5,8 +5,8 @@ div.column_wrap
     :font-size 12px
     :text-transform uppercase
     :margin-bottom 5px  
-  p
-    :font-size 12px
+    :margin-left 0
+  :font-size 12px
   div.column  
     h2
       :border-bottom solid 1px rgb(200,200,200)
@@ -20,10 +20,11 @@ div.column_wrap
     div.active
       :-moz-border-radius 5px
       :-webkit-border-radius 5px
-      :background rgb(50,50,250)
+      :background #259bad
+      :color white
       :padding 3px
       span
-        :background rgb(50,50,250)
+        :background #259bad
         :padding-right 0px
       a
         :color rgb(255,255,255)
