--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -14,8 +14,8 @@
         :float left
         :width 400px 
         h2
-          :font-size 14px
-          :margin 0px
+          :font-size 16px
+          :margin 0 0 10px 0
           :padding 0px
         .text_field
           :width 300px
