--- a/public/stylesheets/sass/projects/show.sass
+++ b/public/stylesheets/sass/projects/show.sass
@@ -1,8 +1,15 @@
+.show_projects
+  h2
+    :border none
+    :margin 0
+      :bottom 5px
+
 .show_projects, .index_task_lists
   .project_name
     :font-weight bold
     :font-variant small-caps
     :font-size 14px
+    :margin-bottom 15px
   h2
     .help
       :float right
@@ -21,6 +28,9 @@
       .project, .project_arr
         :display none
       .target, .target_arr
+
+
+
 .index_conversations, .show_conversations, .show_tasks
   .comment
     .name
