--- a/public/stylesheets/sass/tasks/header.sass
+++ b/public/stylesheets/sass/tasks/header.sass
@@ -3,10 +3,11 @@
   :padding 5px 0px
   :font-size 12px
   h2
+    :border none
     span.task_status
       :padding 2px 5px
       :font-size 12px
-    :font-size 16px
+      :float none
     :margin 0px
       :bottom 3px
 .task_header
