--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -1,8 +1,15 @@
 .upload
+  :padding 25px 0px
+  :border
+    :top 1px solid white
+    :bottom 1px solid white
+  &:hover
+    :border
+      :top 1px solid #dbe1e6
+      :bottom 1px solid #dbe1e6
+    :background-color #f6f6f6
   :margin 0px
-    :top 15px
     :left 16px
-    :bottom 15px
   .info
     :width 60px
     :float left
@@ -58,7 +65,7 @@
     .name
       :font-size 12px
       :margin-bottom 5px
-      :border-bottom solid 1px rgb(235,235,235)      
+      :border-bottom solid 1px rgb(235,235,235)
       a
         :font-size 12px
         :font-weight bold
