--- a/public/stylesheets/sass/users/show.sass
+++ b/public/stylesheets/sass/users/show.sass
@@ -1,12 +1,8 @@
 .show_users
   .content
-    h2
-      :margin 5px 0 0 10px
   .column_wrap
     .profile
       :margin-bottom 20px
-
-.show_users
   .banner
     :-moz-border-radius
       :topleft 5px
@@ -14,14 +10,13 @@
     :-webkit-border-top-left-radius 5px
     :-webkit-border-top-right-radius 5px
     :background #78acd7
-    :padding 10px
+    :padding 8px
     h2
-      :margin 0px
-      :font-size 24px
-      :text-shadow white 0 1px 1px
-      span
-        :vertical-align middle
+      :border none
+      :margin 0
+      :padding-left 5px
       span.login
+        :color #333
         :margin-left 5px
         :padding 5px
         :font-size 14px
