--- a/app/views/pages/_page_sidebar.haml
+++ b/app/views/pages/_page_sidebar.haml
@@ -1,3 +1,3 @@
-.page{ :class => "#{ 'active_page' if current_target == page }" }
+.page{ :class => "#{ 'active' if current_target == page }" }
   .title
     = page_link(page)
