--- a/public/stylesheets/sass/comments/form.sass
+++ b/public/stylesheets/sass/comments/form.sass
@@ -3,7 +3,7 @@ form#new_comment
   :margin-bottom 30px
   :border-bottom solid 1px rgb(220,220,220)
   .body
-    :margin-bottom 5px  
+    :margin-bottom 5px
     textarea
       :width 626px
       :margin-bottom 0px
@@ -72,10 +72,10 @@ form#new_comment
     :float right
     :width 200px
   .loading
-    :float right  
+    :float right
 form.reopen
   :background rgb(255,255,200)
-  :border 1px rgb(220,220,150) solid  
+  :border 1px rgb(220,220,150) solid
   :-moz-border-radius 5px
   :-webkit-border-radius 5px
   :padding 10px
@@ -85,8 +85,9 @@ form.reopen
       :bottom 5px
     :font-size 13px
     :color rgb(33,33,27)
+    :border none
   .reopen_body
-    :margin-bottom 5px  
+    :margin-bottom 5px
     textarea
       :width 606px
       :margin-bottom 0px
