--- a/public/stylesheets/sass/welcome.sass
+++ b/public/stylesheets/sass/welcome.sass
@@ -1,16 +1,19 @@
 .welcome_users
   .content
+    a
+      :text-decoration underline
     .section
-      :padding
+      :margin
+        :top 30px
         :left 5px
-        :bottom 10px
-      :border-top solid 1px rgb(230,230,230)
+        :bottom 30px
       h2
         :font-family Helvetica
         :font-size 18px
         :margin 0px
           :top 10px
           :bottom 5px
+        :border none
       p
         :font-size 12px
         :margin-bottom 5px
@@ -20,3 +23,6 @@
         :font-size 24px
   .project_navigation
     :height 5px
+  .column
+    a
+      :font-size 12px
