--- a/public/stylesheets/tasks/header.css
+++ b/public/stylesheets/tasks/header.css
@@ -3,12 +3,13 @@
   padding: 5px 0px;
   font-size: 12px; }
   .task_header h2, .task_list_header h2 {
-    font-size: 16px;
+    border: none;
     margin: 0px;
     margin-bottom: 3px; }
     .task_header h2 span.task_status, .task_list_header h2 span.task_status {
       padding: 2px 5px;
-      font-size: 12px; }
+      font-size: 12px;
+      float: none; }
 
 .task_header span.due_on {
   display: block;
