Displaying only active tasks in Tasks Across All Projects

--- a/public/stylesheets/sass/tasks/index.sass
+++ b/public/stylesheets/sass/tasks/index.sass
@@ -82,7 +82,7 @@ table.task_list
           :color rgb(0,0,200)
           :font-weight bold
           a
-            :color rgb(0,0,200)
+            :color #555
             :font-weight normal
     tr.overdue
       td
