--- a/app/views/task_lists/_tasks_for_all_projects.haml
+++ b/app/views/task_lists/_tasks_for_all_projects.haml
@@ -1,7 +1,7 @@
 %table.task_list
   %tbody
     - for task in tasks
-      %tr{ :class => "#{'overdue' if task.overdue? } #{ 'mine' if task.assigned_to?(current_user) && task.open?}"}
+      %tr{ :class => "#{'overdue' if task.overdue? } #{ 'mine' if task.open? && task.assigned_to?(current_user)}"}
         %td.status
           = task_status(task,:content)
         %td.name{ :class => "task_item_#{task.status_name}"}
@@ -9,9 +9,9 @@
             = localized_status_name(task)
           = link_to task.project, project_path(task.project)
           &rarr;
-          = link_to task.task_list, project_task_list_path(task.project,task.task_list)
+          = link_to task.task_list, project_task_list_path(task.project, task.task_list)
           &rarr;
-          = link_to task.name, project_task_list_task_path(task.project,task.task_list,task), :class => 'name'
+          = link_to task.name, project_task_list_task_path(task.project, task.task_list, task), :class => 'name'
           - unless (task.due_on.nil? && task.unassigned?) || task.closed?
             %span.assigned
               = due_on(task) if task.due_on
