--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -17,7 +17,7 @@ if logged_in?
     add_tab({:html => {:id => 'projects_tab', 
 	                   :li_end => projects_tab_list(current_user.projects.unarchived)}
 	}) do |t|
-      t.named "#{t('.all_projects')}"
+      t.named "#{t('.all_projects')} #{image_tag('triangle.png', :class => 'triangle')}"
       t.links_to projects_path
       t.highlights_on :controller => :projects, :action => :index
       t.tab_index = 101
