--- a/public/stylesheets/sass/comments/show.sass
+++ b/public/stylesheets/sass/comments/show.sass
@@ -1,15 +1,18 @@
 .comment
-  :padding 25px 0px
+  :padding 15px 0
   :border
     :top 1px solid white
     :bottom 1px solid white
   &:hover
     :border
-      :top 1px solid #dbe1e6
-      :bottom 1px solid #dbe1e6
+      :top 1px solid #dfe0e2
+      :bottom 1px solid #dfe0e2
     :background-color #f6f6f6
     p.actions
       :visibility visible
+    .block
+      .date
+        :color rgb(0,0,0)
   p.actions
     :visibility hidden
     :position relative
@@ -21,7 +24,8 @@
       :width 16px
       :height 40px
   .info
-    :width 80px
+    :width 70px
+    :padding-right 10px
     :float left
     .thumb_avatar
       :float right
@@ -48,7 +52,7 @@
   span.author, span.project
     :color rgb(120,120,120)
     a
-      :color rgb(80,80,80)
+      :color #5f7c94
       :font-weight normal
   span.arr
     :color rgb(140,140,140)
@@ -70,9 +74,3 @@
     .body
       :margin-top 5px
     .clear
-
-.comment:hover
-  .block
-    .date
-      :color rgb(0,0,0)
-      
