--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -7,13 +7,13 @@
     :padding 0px
   body
     :background white
-    :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
+    :font-family "Lucida Grande","Helvetica Neue",Verdana,Helvetica,Arial,sans-serif
   h1 
     :font-size 1.3em
     img
       :vertical-align middle
   h1,h2,h3,h4,h5,h6,p,textarea
-    :font-family "Lucida Grande","Helvetica Neue",Verdana,Arial,Helvetica,sans-serif
+    :font-family "Lucida Grande","Helvetica Neue",Verdana,Helvetica,Arial,sans-serif
   h2
     :font-size 20px
     :margin
