--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -49,7 +49,7 @@
       a  
         :float left
         :display block
-        :color rgb(70,70,70)
+        :color #49759d
         :text-decoration none
         :padding 5px 8px
         :margin-right 1px
@@ -59,8 +59,10 @@
         :color rgb(20,20,20)
         :text-decoration underline
       a.active
-        :color rgb(48,48,48)
+        :color white
         :background #78acd7
+      img.triangle
+        :padding-bottom 2px
 
     li.welcome, li.new
       a.active
@@ -94,6 +96,7 @@
         :padding 4px 10px 6px 8px
         :margin-bottom 0px
         :font-size 12px
+        :text-shadow #afd0ec 0px 1px 0px
         +round_corners
       a:hover
         :color rgb(0,0,0)
@@ -101,6 +104,7 @@
       a.active
         :font-weight bold
         :color white
+        :text-shadow none
     li.right_side
       :float right
       :margin
