--- a/public/stylesheets/sass/activities.sass
+++ b/public/stylesheets/sass/activities.sass
@@ -1,15 +1,17 @@
 .activity
   :padding 0px
     :top 2px
-  :margin 25px 0px
+  :margin 15px 0px
   :font-size 12px
-  :background-color #f1f2f2
-  :border-bottom solid 1px rgb(235,235,235)
+  :background-color #fff9da
+  :border solid 1px #fff3b9
   .date
     :float right
     :font-size 10px
-    :color #c9d4dc
-    :padding-top 3px
+    :color #c7b89f
+    :padding
+      :top 3px
+      :right 5px
   a
     :font-weight bold
   img
@@ -19,11 +21,9 @@
   .clear
     :margin-left 26px
     :padding-bottom 1px
-
-.activity:hover
-  .date
-    :color rgb(0,0,0)
-  .clear
+  &:hover
+    .date
+      :color rgb(0,0,0)
 
 .activity_icon
   :float left
