--- a/public/stylesheets/sass/textilized.sass
+++ b/public/stylesheets/sass/textilized.sass
@@ -12,7 +12,7 @@
       :font-size 12px
   p
     :font-family "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
-    :line-height 1.3em
+    :line-height 18px
     :margin 2px 0 10px
   a
     :text-decoration underline
