--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -1,5 +1,5 @@
 .upload
-  :padding 25px 0px
+  :padding 15px 0px
   :border
     :top 1px solid white
     :bottom 1px solid white
@@ -9,9 +9,10 @@
       :bottom 1px solid #dbe1e6
     :background-color #f6f6f6
   :margin 0px
-    :left 16px
+    :left 6px
   .info
     :width 60px
+    :padding-right 10px
     :float left
     a
       :display block
