Include full name

--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -97,11 +97,15 @@ div.autocomplete ul
 div.autocomplete ul li.selected
   :background-color #EBEBEB
 
+div.autocomplete .informal
+  :text-align right
+
 div.autocomplete ul li
   :list-style-type none
   :display block
   :margin 0
   :padding 2px
+  :padding-right 10px
   :height 32px
   :cursor pointer
   :border-bottom 1px solid #ccc
