Restyling autocomplete box

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -6,6 +6,7 @@ e:compact
 @import column.sass
 @import footer.sass
 @import forms.sass
+@import autocomplete.sass
 @import flash_box.sass
 @import facebox.sass
 @import primers.sass
