--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,6 +1,10 @@
-.task{ :id => task_id(:item,project,task_list,task), :class => "#{ "active_#{task.status_name}" if current_target == task } task_item task_item_#{task.status_name} #{"archived_task" if task.archived?} #{"my_task" if task.assigned_to?(current_user)}", :show_in_main_content_url => show_in_main_content_project_task_list_task_path(project, task_list, task), :style => ("display:none" if task.archived?) }
+- active = (current_target == task) ? "active_#{task.status_name}" : nil
+- archived = task.archived? ? "archived_task" : nil
+- mine = task.assigned_to?(current_user) ? "mine" : nil
+- late = task.overdue? ? "late" : nil
+.task{ :id => task_id(:item,project,task_list,task), :class => "#{active} task_item task_item_#{task.status_name} #{archived} #{mine}", :show_in_main_content_url => show_in_main_content_project_task_list_task_path(project, task_list, task), :style => ("display:none" if task.archived?) }
   = task_status(task,:column)
   = task_drag_link(task)
   - mine = (task.assigned.try(:user_id) == current_user.id) ? 'mine' : ''
-  = link_to task.name, project_task_list_task_path(project,task_list,task), :class => "name #{mine}"
+  = link_to task.name, project_task_list_task_path(project,task_list,task), :class => "name #{mine} #{late}"
 .clear
