Empty comments no longer allowed

--- a/public/stylesheets/sass/comments/form.sass
+++ b/public/stylesheets/sass/comments/form.sass
@@ -73,6 +73,10 @@ form#new_comment
     :width 200px
   .loading
     :float right
+  p.error
+    :color red
+    :font-weight bold
+
 form.reopen
   :background rgb(255,255,200)
   :border 1px rgb(220,220,150) solid
