--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -118,6 +118,7 @@
 
 .upload_area
   :clear both
+  :background-color rgb(255,255,255)
   :border solid 1px rgb(200,200,200)
   :padding 5px
   :margin
