--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -140,8 +140,8 @@ h2
           :float right
           :font-size 10px
           :color #999
-    #projects, #conversations
-      .project, .conversation
+    #projects, #conversations, #task_lists
+      .project, .conversation, .task_list
         :font-size 16px
         :display block
         :border-bottom 1px solid #ddd
@@ -152,7 +152,12 @@ h2
           :padding 10px
         a.new
           :color #555
-        
+    #task_lists
+      .task_list
+        .tasks a, div.new a
+          :font-size 12px
+          :padding 0 0 0 10px
+          :margin 7px 0
 
 .show_projects
   .comment, .activity
@@ -174,12 +179,47 @@ h2
       input, label
         :display inline
 
+.show_tasks
+  .project, .project_arr, .target, .target_arr
+    :display none
+
+.show_task_lists
+  a
+    :text-decoration none
+    :color #3B5998
+  .project, .project_arr
+    :display none
+
+.statuses
+  .status
+    input
+      :display inline
+
 .watching
   :padding-left 10px
   :font-size 12px
   a
     :color #999
 
+span.task_status, span.current_task_status
+  :padding 0 3px
+  :text-transform uppercase
+  :color rgb(255,255,255)
+  :font-size 11px
+  :-moz-border-radius 4px
+  :-webkit-border-radius 4px
+  :display inline-block
+.task_status_new
+  :background #9da3a7
+.task_status_open
+  :background #ffc947
+.task_status_hold
+  :background #be3cff
+.task_status_resolved
+  :background #afd142
+.task_status_rejected
+  :background #e97063
+  
 #footer
   :border-top 1px solid #BDBFC4
   a
