--- a/public/stylesheets/sass/invitations.sass
+++ b/public/stylesheets/sass/invitations.sass
@@ -17,8 +17,9 @@
 
 .new_invitation
   .text_field
-    :width 300px
     input
-      :width 100%
+      :width 598px
   .submit
-    :width 120px
+    :text-align right
+    :padding-top 8px
+    :width 608px
