--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -14,20 +14,20 @@
       :-webkit-border-radius 5px    
       .invite_by_search
         :float left
-        :width 400px 
         h2
           :font-size 16px
           :margin 0 0 10px 0
           :padding 0px
         .text_field
-          :width 300px
           label
             :width 600px
-      .invite_recent
-        :width 240px
-        :float left
-        .invite_user_link
-          :height 28px
+
+  .invite_recent
+    .invite_user_link
+      :height 28px
+    .micro_avatar
+      :padding-top 4px
+
   .people
     .person
       :clear both
@@ -42,7 +42,7 @@
         :background rgb(200,200,200)
         :-moz-border-radius 5px
         :-webkit-border-radius 5px
-        :width 860px
+        :width 588px
         :float left
         h2
           :color rgb(80,80,80)
@@ -56,7 +56,7 @@
           :padding 5px
           :background rgb(220,220,220)
           :float left
-          :width 195px
+          :width 127px
           :height 100px
         .active
           :background rgb(255,255,255)
