Dark background for assigned tasks

--- a/public/stylesheets/sass/tasks/default.sass
+++ b/public/stylesheets/sass/tasks/default.sass
@@ -31,21 +31,25 @@ a.show_archived_tasks_link
 span.task_status, span.current_task_status
   :padding 0 3px
   :text-transform uppercase
-  :color rgb(255,255,255)
   :font-size 11px
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
   :display inline-block
 .task_status_new
   :background #9da3a7
+  :color white
 .task_status_open
   :background #ffc947
+  :color #333
 .task_status_hold
   :background #be3cff
+  :color white
 .task_status_resolved
   :background #afd142
+  :color white
 .task_status_rejected
   :background #e97063
+  :color white
 
 .tasks
   .archived_task
