--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -53,6 +53,8 @@ e:compact
 @import users/show.sass
 @import users/edit.sass
 
+@import groups.sass
+
 @import cards.sass
 @import calendars.sass
 @import textilized.sass
