--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -9,6 +9,8 @@
     :width 640px
     :padding 10px
       :right 0px
+    p
+      :font-size 12px
   a.loading_button
     :background url(../images/loading_button_bg.gif) no-repeat left
     :font-size 12px
