--- a/app/views/invitations/_pending.haml
+++ b/app/views/invitations/_pending.haml
@@ -1,12 +1,23 @@
 .project
   = thumb_avatar(invitation.user)
   .text
-    = t('.invited_to_join', :by => user_link(invitation.user), :project => content_tag(:b,h(invitation.project.name)))
+    - if invitation.project
+      = t('.invited_to_join', :by => user_link(invitation.user), :project => content_tag(:b,h(invitation.target.name)))
+    - else
+      = t('.invited_to_join_group', :by => user_link(invitation.user), :group => content_tag(:b,h(invitation.target.name)))
   
   .actions
-    - form_for invitation.project, :url => accept_project_invitation_path(invitation.project,invitation), :html => { :class => 'accept_project' } do |f|
-      = f.submit t('common.accept')
-    %span 
-      = t('.to_access_or')
-    - form_for invitation.project, :url => decline_project_invitation_path(invitation.project,invitation), :html => { :class => 'decline_project' } do |f|
-      = f.submit t('common.decline')
+    - if invitation.project
+      - form_for invitation.project, :url => accept_project_invitation_path(invitation.target,invitation), :html => { :class => 'accept_project' } do |f|
+        = f.submit t('common.accept')
+        %span 
+        = t('.to_access_or')
+      - form_for invitation.project, :url => decline_project_invitation_path(invitation.target,invitation), :html => { :class => 'decline_project' } do |f|
+        = f.submit t('common.decline')
+    - else
+      - form_for invitation.group, :url => accept_group_invitation_path(invitation.target,invitation), :html => { :class => 'accept_project' } do |f|
+        = f.submit t('common.accept')
+        %span 
+        = t('.to_access_or_group')
+      - form_for invitation.group, :url => decline_group_invitation_path(invitation.target,invitation), :html => { :class => 'decline_project' } do |f|
+        = f.submit t('common.decline')
